# CERN-ATLAS-open-data-scaleops-workbench

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
atlas_workbench/api/: main.py  schemas.py
atlas_workbench/api/routers/: collections.py  eval_router.py  manifests.py  plans.py  seed_query.py  validate_evidence.py
atlas_workbench/core/: atlas_client.py  cern_client.py  docs_seeder.py  execution_planner.py  manifest_builder.py  metadata_seeder.py  provenance.py  query_engine.py  stream_decision.py  stream_planner.py  subset_planner.py  validator.py
atlas_workbench/db/: models.py  session.py
atlas_workbench/seed/: release_metadata.json
docker/: Dockerfile  docker-compose.yml
fixtures/: eval_questions.json
scripts/: seed_runner.py  validate_runner.py
tests/integration/: test_api_manifests_plans.py  test_api_query.py  test_api_seed.py  test_validator_live.py
tests/unit/: test_db_models.py  test_execution_planner.py  test_manifest_builder.py  test_provenance.py  test_stream_decision.py  test_subset_planner.py
