[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-open-data-scaleops-workbench"
version = "0.1.0"
description = "Control-plane-first data engineering system for the ATLAS 2024 research open-data release (DAOD_PHYSLITE)"
requires-python = ">=3.11"
dependencies = [
    # Infrastructure — >= allows patch-level updates within semver bounds
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.30.1",
    "httpx>=0.27.0",
    # Scientific/domain packages
    "atlasopenmagic==1.9.0",
    "cernopendata-client==1.0.2",
    # uproot>=5.3.0: 5.1.2 broken on numpy 2.x (uint8 OverflowError)
    # awkward>=2.6.0: 2.5.0 broken on numpy 2.x (missing numpy.AxisError)
    "uproot>=5.3.0",
    "awkward>=2.6.0",
    "vector>=1.1.1",
    # HTTP transport for uproot over opendata.cern.ch (fallback when xrootd port 1094 blocked)
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    # Remote streaming via xrootd — >= allows compatible updates
    "xrootd>=5.6.9",
    "fsspec-xrootd>=0.3.2",
]

[project.scripts]
atlas-seed = "scripts.seed_runner:main"
atlas-validate = "scripts.validate_runner:main"

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "ruff>=0.4.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas_workbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
